--- a/Desenvolvimento Front-End/src/input.css
+++ b/Desenvolvimento Front-End/src/input.css
@@ -41,4 +41,38 @@
     
 }
 
+.menu-grande {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 250px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    padding: 1rem;
+    display: none;
+    z-index: 1000;
+}
+
+.menu-grande.active {
+    display: block;
+}
+
+.menu .item {
+    padding: 0.5rem;
+    margin: 0.25rem 0;
+    border-radius: 5px;
+    transition: background-color 0.2s;
+}
+
+.menu .item:hover {
+    background-color: #f3f4f6;
+}
+
+.menu .icon {
+    margin-right: 0.75rem;
+    width: 20px;
+    display: inline-block;
+}
+
 
