--- a/Desenvolvimento Front-End/src/index.css
+++ b/Desenvolvimento Front-End/src/index.css
@@ -1,55 +1,3 @@
-.menu{
-    transition: 0.3s;
-    width: 140px;
-    padding-top: 8px;
-    background-color: #fffbeb;
-    height: 40px;
-    border-radius: 20px;
-    top: 8px;
-    position: absolute;
-
-}
-
-.imagem{
-    width: 24px;
-    height: 24px; 
-    transition: 0.3s;   
-}
-
-.imagem-dep{
-    width: 32px;
-    height: 32px;
-    transition: 0.3s; 
-}
-
-.menu.expandir{
-    height: auto;
-    width: 300px;
-    transition: .1s;  
-    padding: 8px 20px 16px 20px;
-    transition: 0.3s;
-    font-size: 20px;
-    
-}
-
-.text{
-    margin-left: 10px;
-}
-
-.item{
-    font-size: 20px;
-    margin-bottom: 20px;
-    transition-duration: 0.3s;  
-    color: rgb(87, 87, 87);  
-}
-
-.item:hover{
-    padding: 0px 10px;
-    border-radius: 3px;
-    color: black;
-    transition-duration: 0.3s;
-}
-
 .publique{
     opacity: 0;  
     transform: translateX(-20%); 
@@ -93,6 +41,82 @@
     filter: blur(0); 
     transition: all 1.5s;
 }
+
+
+
+#imagem{
+    width: 24px;
+    height: 24px; 
+    transition: 0.3s;   
+}
+
+#imagem.dep{
+    width: 32px;
+    height: 32px;
+    transition: 0.3s; 
+}
+
+#menu{
+    transition: 0.3s;
+    width: 140px;
+    padding-top: 8px;
+    background-color: #fffbeb;
+    height: 40px;
+    border-radius: 20px;
+    top: 8px;
+    position: absolute;
+    overflow: hidden;
+
+}
+
+#menu.expandir{
+    height: auto;
+    width: 300px;
+    transition: .1s;  
+    padding: 8px 20px 16px 20px;
+    transition: 0.3s;
+    font-size: 20px;
+    
+}
+
+
+
+.text{
+    margin-left: 10px;
+}
+
+.item{
+    font-size: 20px;
+    margin-bottom: 20px;
+    transition-duration: 0.3s;  
+    color: rgb(87, 87, 87);  
+}
+
+.item:hover{
+    padding: 0px 10px;
+    border-radius: 3px;
+    color: black;
+    transition-duration: 0.3s;
+}
+
+#menu .item {
+    padding: 0.5rem;
+    margin: 0.25rem 0;
+    border-radius: 5px;
+    transition: background-color 0.2s;
+}
+
+#menu .item:hover {
+    background-color: #f3f4f6;
+}
+
+#menu .icon {
+    margin-right: 0.75rem;
+    width: 20px;
+    display: inline-block;
+}
+
+
 
 
 
